--- a/calculator.html
+++ b/calculator.html
@@ -3,9 +3,17 @@
     <title>Idc Calculator</title>
     <!-- Include the Materialize CSS file -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <!-- Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <style>
+      /* Apply the Roboto font to the body element */
+      body {
+        font-family: 'Roboto', sans-serif;
+      }
+    </style>
   </head>
   <body class="darken-4">
-    <h1 class="center-align">Idc Calculator</h1>
+    <h3 class="center-align">22FDX Calculator</h1>
     <form id="calculator-form" class="container">
       <div class="row">
         <div class="input-field col s6">
