--- a/calculator.html
+++ b/calculator.html
@@ -1,16 +1,10 @@
 <html>
   <head>
     <title>22FDX Calculator</title>
-    <!-- Include the Materialize CSS file -->
+     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <!-- Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <style>
-      /* Apply the Roboto font to the body element */
-      body {
-        font-family: 'Roboto', sans-serif;
-      }
-    </style>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </head>
   <body class="darken-4">
     <h5 class="center-align">22FDX Calculator</h1>
