--- a/calculator.html
+++ b/calculator.html
@@ -13,7 +13,7 @@
       <div class="row">
         <div class="input-field col s6">
           <input type="number" id="metal-width" class="validate">
-          <placeholder for="metal-width" style="font-size: 12px;">Line Width (μm)</placeholder>
+          <label for="metal-width">Line Width (μm)</label>
         </div>
       </div>
       <div class="row">
